examples(core): add template-core and switch manifest/tests to namespace 'template' with tool 'echo'

--- a/examples/manifests/hub.yaml
+++ b/examples/manifests/hub.yaml
@@ -1,6 +1,6 @@
 cores:
-  echo:
+  template:
     command: node
-    args: ["runtime/examples/cores/echo-core.js"]
-    namespace: echo
+    args: ["runtime/examples/cores/template-core.js"]
+    namespace: template
     cwd: "/Users/ghively/Documents/MCP/The_Hub"
